# cpp-lang-en-uk-nouns

./: CMakeLists.txt  LICENSE  README.md
lang/en/uk/: nouns.cpp  nouns.hpp
